fixed overflow in mobile layout

--- a/Main_Folder/MY_PROJECTS/calculator/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/calculator/src/App.scss
@@ -1,3 +1,7 @@
+.App{
+  height:100vh;
+  max-height: fill-available;
+}
 .fill-avail{
   height: fill-available;
   max-height: fill-available;
